--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
 
           <div class="services__cards">
             <div class="services__card">
-                           <img src="rafa.png" height="50%" width="100%"/>
+                           <img src="casa.jpg" height="50%" width="100%"/>
               <h3 class="services__card-title">Back End</h3>
               <p class="services__card-description"> Gosto de construir a estrutura lógica e funcional de uma web-site.</p>
             </div>
 
             <div class="services__card">
-              <img src="rafa.png" height="50%" width="100%"/>
+              <img src="senhor.jpg" height="50%" width="100%"/>
               <h3 class="services__card-title">Front End</h3>
               <p class="services__card-description">Três linguagens de programação que gosto é html, css, main.js.</p>
             </div>
