--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </div>
 
             <div class="services__card">
-              <img src="campocidade.jpg" height="50%" width="100%"/>
+               <img src="3.jpg" height="50%" width="100%"/>
               <h3 class="services__card-title">Técnico de Informática</h3>
               <p class="services__card-description">Trabalho com formatação, upgrade de hd para ssd entre outros serviços.</p>
             </div>
