--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
      <header class="header" id="header">
       <nav class="nav">
         <div class="nav__content container">
-          <a href="#" class="nav__logo"><span> 🍇🍇🍇🍇</span></a>
+          <a href="#" class="nav__logo"><span> Eloisa Amorim</span></a>
           <ul class="nav__links">
             <li class="nav__link"><a href="#header">Pagina inicial</a></li>
             <li class="nav__link"><a href="#services">Serviços</a></li>
@@ -57,13 +57,13 @@
         <div class="hero__content container">   
           <div class="social-media social-media--hero">
             <div class="social-media__icon">
-              <a href="https://api.whatsapp.com/send?phone=5543996561825"><i class="fa-brands fa-whatsapp"></i></a>
+              <a href="https://api.whatsapp.com/send?phone=5543999069235"><i class="fa-brands fa-whatsapp"></i></a>
             </div>
             <div class="social-media__icon">
               <a href="https://www.youtube.com/channel/UCBRq6fO_-P6yPOVbC0yZVmQ"><i class="fa-brands fa-square-youtube"></i></a>
             </div>
             <div class="social-media__icon">
-              <a href="https://github.com/professor-rafael"><i class="fa-brands fa-github"></i></a>
+              <a href="https://github.com/eloisaamorim7"><i class="fa-brands fa-github"></i></a>
             </div>
           </div>
         </div>
