--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
               </div>
 
               <audio controls>
-                <source src="Imagem do WhatsApp de 2025-06-05 à(s) 13.14.47_eaee4502.jpg" type="audio/mp3">
-                <source src="Imagem do WhatsApp de 2025-06-05 à(s) 13.19.54_6f198d21.jpg" type="audio/wav">
-                <source src="Imagem do WhatsApp de 2025-06-05 à(s) 13.12.01_778bec76.jpg" type="audio/ogg">
+                <source src="ras.ogg" type="audio/mp3">
+                <source src="ras.mp3" type="audio/wav">
+                <source src="ras.wav" type="audio/ogg">
               </audio>
 
             </div>
