--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
       <section class="about" id="about">
         <div class="section__content container">
           <h2 class="section__title">Sobre mim</h2>
-          <p class="about__text">Olá, sou Rafael Assis Santos, Graduado em História Licenciatura, Pedagogia, Análise e Desenvolvimento de Sistemas, 
-          Teologia Biblíca do Novo Testamento, Especializações em Educação Especial, 
-          Educação do Campo, Metodologias do Ensino da Matemática e Tecnologia e Informação.</p>
+          <p class="about__text">O campo e a cidade têm estilos de vida diferentes. O campo é mais calmo, com natureza e simplicidade. A cidade é agitada, cheia de oportunidades e diversidade. Cada lugar tem seu valor e nos ensina algo único.
+
+Quando nos esforçamos, não importa onde estamos — as oportunidades aparecem. Um intercâmbio é prova disso: dedicação e coragem nos levam longe, abrindo portas e criando memórias para a vida toda.</p>
          
         </div>
       </section>
@@ -114,7 +114,7 @@
 
           <div class="proyects__cards">
             <div class="proyects__card">
-              <img src="rafa.png" alt="image of proyect" class="proyects__card-img">
+              <img src="Imagem do WhatsApp de 2025-06-05 à(s) 13.14.47_eaee4502.jpg" alt="image of proyect" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 1</h3>
                 <a href="https://github.com/professor-rafael/TrAbAlHo-SoBrE-IA"><i class="fa-brands fa-github"></i></a>
@@ -123,7 +123,7 @@
             </div>
 
             <div class="proyects__card">
-              <img src="rafa.png" alt="image of proyect" class="proyects__card-img">
+              <img src="Imagem do WhatsApp de 2025-06-05 à(s) 13.19.54_6f198d21.jpg" alt="image of proyect" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 2</h3>
                 <a href="https://github.com/professor-rafael/projeto_--_uva_niagara"><i class="fa-brands fa-github"></i></a>
@@ -132,7 +132,7 @@
             </div>
 
             <div class="proyects__card">
-              <img src="rafa.png" alt="image of proyect" class="proyects__card-img">
+              <img src="Imagem do WhatsApp de 2025-06-05 à(s) 13.12.01_778bec76.jpg" alt="image of proyect" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 3</h3>
                 <a href="https://github.com/professor-rafael/gerador_de_senhas"><i class="fa-brands fa-github"></i></a>
@@ -167,9 +167,9 @@
               </div>
 
               <audio controls>
-                <source src="ras.ogg" type="audio/mp3">
-                <source src="ras.mp3" type="audio/wav">
-                <source src="ras.wav" type="audio/ogg">
+                <source src="ras.mp3" type="audio/mp3">
+                <source src="ras.wav" type="audio/wav">
+                <source src="ras.ogg" type="audio/ogg">
               </audio>
 
             </div>
