--- a/index.html
+++ b/index.html
@@ -101,9 +101,11 @@
       <section class="about" id="about">
         <div class="section__content container">
           <h2 class="section__title">Sobre mim</h2>
-          <p class="about__text">O campo e a cidade têm estilos de vida diferentes. O campo é mais calmo, com natureza e simplicidade. A cidade é agitada, cheia de oportunidades e diversidade. Cada lugar tem seu valor e nos ensina algo único.
+          <p class="about__text">O campo e a cidade têm belezas e ritmos muito diferentes. No campo, a vida costuma ser mais tranquila, com paisagens naturais, ar puro e um forte senso de comunidade. Já a cidade é cheia de movimento, diversidade e oportunidades em várias áreas, como educação, trabalho e cultura.
 
-Quando nos esforçamos, não importa onde estamos — as oportunidades aparecem. Um intercâmbio é prova disso: dedicação e coragem nos levam longe, abrindo portas e criando memórias para a vida toda.</p>
+Cada lugar tem seu valor, e viver em ambos nos ajuda a crescer, aprender e valorizar diferentes formas de vida.
+
+Independentemente de onde estamos seja no campo ou na cidade quando nos esforçamos, novas oportunidades surgem. O intercâmbio é um exemplo disso: é fruto de dedicação, estudo e coragem para sair da zona de conforto. Ao nos abrirmos para o novo e darmos o nosso melhor, o mundo retribui com experiências incríveis, aprendizados e conexões que levamos para a vida toda.</p>
          
         </div>
       </section>
