--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <li class="nav__link"><a href="#contact">Contato</a></li>
           </ul>
       </nav>
-      <img src="fundo.jpeg" height="50%" width="100%"/>
+      <img src="Imagem do WhatsApp de 2025-06-05 à(s) 16.12.42_313da2e4.jpg" height="50%" width="100%"/>
   
       
         <div class="hero__content container">   
@@ -119,8 +119,8 @@ Independentemente de onde estamos seja no campo ou na cidade quando nos esforça
               <img src="Imagem do WhatsApp de 2025-06-05 à(s) 13.14.47_eaee4502.jpg" alt="image of proyect" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 1</h3>
-                <a href="https://github.com/professor-rafael/TrAbAlHo-SoBrE-IA"><i class="fa-brands fa-github"></i></a>
-                <p class="proyects__card-description">Trabalho sobre IA.</p>
+                <a href="https://eloisaamorim7.github.io/curso-3-tri/"><i class="fa-brands fa-github"></i></a>
+                <p class="proyects__card-description">Guarulhos</p>
               </div>
             </div>
 
@@ -128,8 +128,8 @@ Independentemente de onde estamos seja no campo ou na cidade quando nos esforça
               <img src="Imagem do WhatsApp de 2025-06-05 à(s) 13.19.54_6f198d21.jpg" alt="image of proyect" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 2</h3>
-                <a href="https://github.com/professor-rafael/projeto_--_uva_niagara"><i class="fa-brands fa-github"></i></a>
-                <p class="proyects__card-description">Web site sobre Uva Niágara.</p>
+                <a href="https://eloisaamorim7.github.io/curso-2-tri/"><i class="fa-brands fa-github"></i></a>
+                <p class="proyects__card-description">Fremantle - Perth,Wa.</p>
               </div>
             </div>
 
@@ -137,8 +137,8 @@ Independentemente de onde estamos seja no campo ou na cidade quando nos esforça
               <img src="Imagem do WhatsApp de 2025-06-05 à(s) 13.12.01_778bec76.jpg" alt="image of proyect" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 3</h3>
-                <a href="https://github.com/professor-rafael/gerador_de_senhas"><i class="fa-brands fa-github"></i></a>
-                <p class="proyects__card-description">Web site sobre segurança digital.</p>
+                <a href="https://eloisaamorim7.github.io/portfolio-elo/"><i class="fa-brands fa-github"></i></a>
+                <p class="proyects__card-description">Scarborough</p>
               </div>
             </div>
 
