--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <li class="nav__link"><a href="#contact">Contato</a></li>
           </ul>
       </nav>
-      <img src="Imagem do WhatsApp de 2025-06-05 à(s) 16.12.42_313da2e4.jpg" height="50%" width="100%"/>
+      <img src="fundo.jpeg" height="50%" width="100%"/>
   
       
         <div class="hero__content container">   
@@ -79,20 +79,20 @@
           <div class="services__cards">
             <div class="services__card">
                            <img src="casa.jpg" height="50%" width="100%"/>
-              <h3 class="services__card-title">Back End</h3>
-              <p class="services__card-description"> Gosto de construir a estrutura lógica e funcional de uma web-site.</p>
+              <h3 class="services__card-title">Campo</h3>
+              <p class="services__card-description">Agricultores, produtores, o campo está cada vez mais e todos sabemos que a cidade precisa do campo. </p>
             </div>
 
             <div class="services__card">
               <img src="senhor.jpg" height="50%" width="100%"/>
-              <h3 class="services__card-title">Front End</h3>
-              <p class="services__card-description">Três linguagens de programação que gosto é html, css, main.js.</p>
+              <h3 class="services__card-title">Sítio Pedro Coelho</h3>
+              <p class="services__card-description">Oferece ótimos produtos artesanais, frutas frescas e a paz que você precisa.</p>
             </div>
 
             <div class="services__card">
                <img src="3.jpg" height="50%" width="100%"/>
-              <h3 class="services__card-title">Técnico de Informática</h3>
-              <p class="services__card-description">Trabalho com formatação, upgrade de hd para ssd entre outros serviços.</p>
+              <h3 class="services__card-title">Fazenda</h3>
+              <p class="services__card-description">É o lugar de de calma e tranquilidade, onde você merece ser feliz.</p>
             </div>
           </div>
         </div>
