--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="services__card">
                            <img src="casa.jpg" height="50%" width="100%"/>
               <h3 class="services__card-title">Campo</h3>
-              <p class="services__card-description">O campo está cada vez mais e todos sabemos que a cidade precisa do campo. </p>
+              <p class="services__card-description">Muitos veem só a calma do campo, mas é lá que começa o trabalho que sustenta a cidade. </p>
             </div>
 
             <div class="services__card">
