--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="services__card">
                <img src="3.jpg" height="50%" width="100%"/>
               <h3 class="services__card-title">Fazenda</h3>
-              <p class="services__card-description">É o lugar de de calma e tranquilidade, onde você merece ser feliz.</p>
+              <p class="services__card-description">É um lugar de calma e tranquilidade, onde a natureza acolhe e você merece ser feliz.</p>
             </div>
           </div>
         </div>
