--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="services__card">
               <img src="senhor.jpg" height="50%" width="100%"/>
               <h3 class="services__card-title">Sítio Pedro Coelho</h3>
-              <p class="services__card-description">Oferece ótimos produtos artesanais, frutas frescas e a paz que você precisa.</p>
+              <p class="services__card-description">Das mãos do homem do campo, com esforço e carinho, nascem as verduras que alimentam famílias na cidade.</p>
             </div>
 
             <div class="services__card">
