--- a/index.html
+++ b/index.html
@@ -78,19 +78,19 @@
 
           <div class="services__cards">
             <div class="services__card">
-                           <img src="casa.jpg" height="50%" width="100%"/>
+                           <img src="Imagem do WhatsApp de 2025-06-05 à(s) 20.02.57_88ec42c1.jpg" height="50%" width="100%"/>
               <h3 class="services__card-title">Campo</h3>
               <p class="services__card-description">Muitos veem só a calma do campo, mas é lá que começa o trabalho que sustenta a cidade. </p>
             </div>
 
             <div class="services__card">
-              <img src="senhor.jpg" height="50%" width="100%"/>
+              <img src="Imagem do WhatsApp de 2025-06-05 à(s) 20.03.47_7a117e7d.jpg" height="50%" width="100%"/>
               <h3 class="services__card-title">Sítio Pedro Coelho</h3>
               <p class="services__card-description">Das mãos do homem do campo, com esforço e carinho, nascem as verduras que alimentam famílias na cidade.</p>
             </div>
 
             <div class="services__card">
-               <img src="3.jpg" height="50%" width="100%"/>
+               <img src="Imagem do WhatsApp de 2025-06-05 à(s) 20.03.24_a0e9a227.jpg" height="50%" width="100%"/>
               <h3 class="services__card-title">Fazenda</h3>
               <p class="services__card-description">É um lugar de calma e tranquilidade, onde a natureza acolhe e você merece ser feliz.</p>
             </div>
