--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
             <div class="services__card">
                <img src="Imagem do WhatsApp de 2025-06-05 à(s) 20.03.24_a0e9a227.jpg" height="50%" width="100%"/>
-              <h3 class="services__card-title">Fazenda</h3>
+              <h3 class="services__card-title">Mar</h3>
               <p class="services__card-description">É um lugar de calma e tranquilidade, onde a natureza acolhe e você merece ser feliz.</p>
             </div>
           </div>
