--- a/index.html
+++ b/index.html
@@ -84,15 +84,15 @@
             </div>
 
             <div class="services__card">
-              <img src="Imagem do WhatsApp de 2025-06-05 à(s) 20.03.47_7a117e7d.jpg" height="50%" width="100%"/>
-              <h3 class="services__card-title">Sítio Pedro Coelho</h3>
-              <p class="services__card-description">Das mãos do homem do campo, com esforço e carinho, nascem as verduras que alimentam famílias na cidade.</p>
+              <img src="Imagem do WhatsApp de 2025-06-05 à(s) 20.03.24_a0e9a227.jpg" height="50%" width="100%"/>
+              <h3 class="services__card-title">Mar</h3>
+              <p class="services__card-description">É um lugar de calma e tranquilidade, onde a natureza acolhe e você merece ser feliz.</p>
             </div>
 
             <div class="services__card">
-               <img src="Imagem do WhatsApp de 2025-06-05 à(s) 20.03.24_a0e9a227.jpg" height="50%" width="100%"/>
-              <h3 class="services__card-title">Mar</h3>
-              <p class="services__card-description">É um lugar de calma e tranquilidade, onde a natureza acolhe e você merece ser feliz.</p>
+               <img src="Imagem do WhatsApp de 2025-06-05 à(s) 20.15.37_a40a6a76.jpg" height="50%" width="100%"/>
+              <h3 class="services__card-title">Sítio Pedro Coelho</h3>
+              <p class="services__card-description">Na imensidão da cidade, cada passo esconde uma história, e cada esquina guarda um segredo.</p>
             </div>
           </div>
         </div>
