--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
             <div class="services__card">
                <img src="Imagem do WhatsApp de 2025-06-05 à(s) 20.15.37_a40a6a76.jpg" height="50%" width="100%"/>
-              <h3 class="services__card-title">Sítio Pedro Coelho</h3>
+              <h3 class="services__card-title">Cidade</h3>
               <p class="services__card-description">Na imensidão da cidade, cada passo esconde uma história, e cada esquina guarda um segredo.</p>
             </div>
           </div>
@@ -101,12 +101,7 @@
       <section class="about" id="about">
         <div class="section__content container">
           <h2 class="section__title">Sobre mim</h2>
-          <p class="about__text">O campo e a cidade têm belezas e ritmos muito diferentes. No campo, a vida costuma ser mais tranquila, com paisagens naturais, ar puro e um forte senso de comunidade. Já a cidade é cheia de movimento, diversidade e oportunidades em várias áreas, como educação, trabalho e cultura.
-
-Cada lugar tem seu valor, e viver em ambos nos ajuda a crescer, aprender e valorizar diferentes formas de vida.
-
-Independentemente de onde estamos seja no campo ou na cidade quando nos esforçamos, novas oportunidades surgem. O intercâmbio é um exemplo disso: é fruto de dedicação, estudo e coragem para sair da zona de conforto. Ao nos abrirmos para o novo e darmos o nosso melhor, o mundo retribui com experiências incríveis, aprendizados e conexões que levamos para a vida toda.</p>
-         
+          <p class="about__text">Me chamo Eloisa, trabalho com música e levo comigo a arte como forma de expressão e conexão com o mundo. Tive a incrível oportunidade de participar do programa "Ganhando o Mundo", que me levou a viver um intercâmbio na Austrália , uma experiência que ampliou minha visão de vida, cultura e possibilidades. Conviver com outras realidades me fez perceber o quanto somos pequenos diante da imensidão do mundo, mas também o quanto cada um pode fazer a diferença. A música, que sempre esteve comigo, se tornou ainda mais forte como ponte entre línguas, sentimentos e pessoas.
         </div>
       </section>
 
